--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@
     display:grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    padding: 10px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .cell-buttons-container{
