--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
+:root{
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .game-container{
     height:85vh;
     width:98vw;
     display:flex;
     align-content: center;
     justify-content: center;
+}
+
+.header{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding:10px;
 }
 
 .main-container{
@@ -102,6 +114,7 @@ cell-buttons-container button{
 }
 
 .image{
-    height:300px;
+    height:250px;
+    display: none;
     
 }
