added new classes for new amino acid function

--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,7 @@ cell-buttons-container button{
     justify-content: center;
     padding:10px;
 }
+
+.aminoacid-select-container{
+    display:none;
+}
