--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,50 @@ cell-buttons-container button{
 .aminoacid-select-container{
     display:none;
 }
+
+.all-variables{
+    grid-row: 1/2;
+    grid-column:1/3;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    border:1px solid black;
+}
+
+.resource-variable-container{
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr;
+    align-content: center;
+    font-size: 20px;
+}
+
+.resource-heading{
+    grid-column: 1/5;
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
+    font-weight: bold;
+}
+
+.aminoacid-heading{
+    grid-column: 1/21;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:x-large;
+    font-weight: bold;
+}
+
+.aminoacid-variable-container{
+    display:grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: 1fr 1fr;
+    font-size: small;
+}
+
+.protein-synthesis-container{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    display:grid;
+    grid-template-rows: repeat(4,1fr);
+}
