--- a/styles.css
+++ b/styles.css
@@ -189,4 +189,7 @@ cell-buttons-container button{
     grid-row: 2/3;
     display:grid;
     grid-template-rows: repeat(4,1fr);
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 20px;
 }
